...
        }
      }
    },
    "Go Crash" : {
      "shouldTranslate" : false
    },
    "Goroutines" : {
      "localizations" : {
        "fa" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Goroutines"
          }
...
            "state" : "translated",
            "value" : "分組"
          }
        }
      }
    },
    "Groups" : {
      "localizations" : {
        "fa" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "گروه‌ها"
          }
...
            "state" : "translated",
            "value" : "安裝輔助服務"
          }
        }
      }
    },
    "Install Network Extension" : {
      "localizations" : {
        "fa" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "نصب افزونه شبکه"
          }
...
            "state" : "translated",
            "value" : "伺服器不支援"
          }
        }
      }
    },
    "Ok" : {
      "localizations" : {
        "fa" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "باشه"
          }
...
            "state" : "translated",
            "value" : "你可以透過在應用程式設定中編輯 Ghostty 配置來自定義終端外觀。"
          }
        }
      }
    },
    "You will receive a report when a crash occurs." : {
      "localizations" : {
        "fa" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "هنگام وقوع خرابی، گزارشی دریافت خواهید کرد."
          }
...
